--- a/rebar.config
+++ b/rebar.config
@@ -42,7 +42,7 @@
   {recon, ".*", {git, "git://github.com/ferd/recon.git", "2.3.2"}},
   {erlcloud, ".*", {git, "git://github.com/erlcloud/erlcloud.git", "c119698"}},
   {worker_pool, ".*", {git, "git://github.com/inaka/worker_pool.git", {tag, "2.2.2"}}},
-
+  {erlang_multi_pollset,"*", {git, "git://github.com/max-feng/erlang_multi_pollset.git", {branch, "master"}}},
   %% TODO: Remove this override of an exometer_core dependency
   %%       once it bundles a new enough (i.e. with verify_directories=false) version.
   {setup, {git, "git://github.com/uwiger/setup.git", {tag,"1.6"}}}
